--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>
-        Oms perros y gatos
+        Oms
     </title>
+
+    <body>
+        <h1>hola</h1>
+    </body>
 </head>
 </html>
