--- a/gatos.html
+++ b/gatos.html
@@ -1,13 +1,41 @@
-<!DOCTYPE html>
-<html leng=en>
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>
-        Oms
-    </title>
-
-    <body>
-        <h1>hola gatos</h1>
-    </body>
+	<meta charset="utf-8">
+	<title>Gatos ONG</title>
+	<link rel="stylesheet" type="text/css" href="Estilo.css">
 </head>
+
+	
+<body bgcolor="#000000">
+	<center>
+		<h1>
+			<font color="#FFFFFF">
+				Gatos  en adopción
+			</font>
+		</h1>
+	</center>
+	
+	<div class="container-text-descripcion">
+		<center>
+			<h2>
+				<font color="#FFFFFF">
+					¿Por qué adoptar un gato?
+				</font>
+			</h2>
+			son leales
+		</center>
+	
+	</div>
+	
+	
+	<div class="container-images-gatosadopcion">
+		<a href="GatoBlanco.html"><img src="imagenes/GatoBlanco.jpeg"></a>
+	
+		<a href="GatoCafe.html"><img src="imagenes/GatoCafe.jpeg"></a>
+	
+		<a href="GatoGris.html"><img src="imagenes/GatoGris.jpeg"/></a>
+	</div>
+	
+</body>
 </html>
