Puse las fotos de los gatos

--- a/gatos.html
+++ b/gatos.html
@@ -30,11 +30,11 @@
 	
 	
 	<div class="container-images-gatosadopcion">
-		<a href="GatoBlanco.html"><img src="imagenes/GatoBlanco.jpeg"></a>
+		<a href="GatoBlanco.html"><img src="/imagenes/GatoBlanco.jpeg"></a>
 	
-		<a href="GatoCafe.html"><img src="imagenes/GatoCafe.jpeg"></a>
+		<a href="GatoCafe.html"><img src="/imagenes/GatoCafe.jpeg"></a>
 	
-		<a href="GatoGris.html"><img src="imagenes/GatoGris.jpeg"/></a>
+		<a href="GatoGris.html"><img src="/imagenes/GatoGris.jpeg"/></a>
 	</div>
 	
 </body>
