Añadi las imagenes al archivo

--- a/gatos.html
+++ b/gatos.html
@@ -30,7 +30,7 @@
 	
 	
 	<div class="container-images-gatosadopcion">
-		<a href="GatoBlanco.html"><img src="/imagenes/GatoBlanco.jpeg"></a>
+		<a href="GatoBlanco.html"><img src=""></a>
 	
 		<a href="GatoCafe.html"><img src="/imagenes/GatoCafe.jpeg"></a>
 	
