Avance de los gatos

--- a/gatos.html
+++ b/gatos.html
@@ -16,8 +16,14 @@
 		</h1>
 	</center>
 	
-	<div class="container-text-descripcion">
+	<div class="container-images-gatosgrandes">
 		<center>
+			<img src="imagenes/GatosGrandes.jpg">
+		</center>
+	</div>
+
+	<div class="container-text-descripcion">
+		<center bgcolor="#FFFFFF">
 			<h2>
 				<font color="#FFFFFF">
 					¿Por qué adoptar un gato?
@@ -30,11 +36,13 @@
 	
 	
 	<div class="container-images-gatosadopcion">
-		<a href="GatoBlanco.html"><img src=""></a>
+		<center>
+			<a href="GatoBlanco.html"><img src="imagenes/GatoBlanco.jpeg"></a>
 	
-		<a href="GatoCafe.html"><img src="/imagenes/GatoCafe.jpeg"></a>
+			<a href="GatoCafe.html"><img src="imagenes/GatoCafe.jpeg"></a>
 	
-		<a href="GatoGris.html"><img src="/imagenes/GatoGris.jpeg"/></a>
+			<a href="GatoGris.html"><img src="imagenes/GatoGris.jpeg"/></a>
+		</center>
 	</div>
 	
 </body>
