estrucutura de index

--- a/index.html
+++ b/index.html
@@ -2,12 +2,45 @@
 <html leng=en>
 <head>
     <meta charset="UTF-8">
-    <title>
-        Oms
-    </title>
-
-    <body>
-        <h1>hola</h1>
-    </body>
+    <title>ONG HCF</title>
+    <link rel="stylesheet" href="estilos.css">
+ 
 </head>
+    <body>
+        <header>
+        <h1> <center>RESCATA UN AMIGO</center> </h1>
+        <img src="tierna.jpg" alt="gatitos y perritos" width="700" height="600">
+        </header>
+        <nav>
+            <ul>
+                <li>FUNDACION</li>
+                <li>ADOPTA</li>
+                <li>CREADORES</li>
+            </ul>
+        </nav>
+       
+        <h2>LA FUNDACION</h2>
+        <hr>
+        <p> la fundacion ONG H.F.C es una organizacion sin fines de lucro que nace en el año 2020 con la intencion <BR>
+            de dar solucion a la problematica  de <b>proteccion animal y la tendencia responsble de mascostas</b>. <BR>
+            <BR>
+            Trabajamos diaramente y con recursos donados por nuestros patrocinadores, para que <b>los perritos y gatitos</b><BR>
+            abandonados tengan una mejor calidad de vida. Entre as tareas que realizamos se encuentra el trabajo <BR>
+            constante de alimencacion en terreno, atencion veterinaria y adopcion, todas estas actividades son <BR>
+            realizadas orientadas a que nuestros compañeros encuentren una <b>familia definitiva</b>. <BR>
+           <BR>
+            Todos nuestros animales que se encuentran a nuestro cuidado, se les realiza su debida <b>desparasitación,<BR>
+            vacunacion y esterilizacion</b>. adenas de todos los cuidados y cariños necesarios para su bienestar.<BR>
+            Sin embargo al no poder contar con los suficientes recursos para darles un hogar temporal o refugio,<BR>
+            muchos de los peludos que cuidamos aún permanecen en las calles en busca de un hogar.
+            </p>
+        <div>
+        <hr>
+        <h2>ADOPTA</h2>
+            <a href="perros.html">Pulsa para ir a perritos</a>
+            <a href="gatos.html">Pulsa para ir a gatitos</a>
+        </div>
+        <h2>CREADORES</h2>
+
+    </body>
 </html>
