guardando mas cosas

--- a/gatos.html
+++ b/gatos.html
@@ -22,20 +22,39 @@
 		</center>
 	</div>
 
-	<div class="container-text-descripcion">
-		<center bgcolor="#FFFFFF">
-			<h2>
-				<font color="#FFFFFF">
-					¿Por qué adoptar un gato?
-				</font>
-			</h2>
-			son leales
-		</center>
+
+	<div class="container-text-titulodescri">
+		<h2>
+			¿Por qué adoptar un gato?
+		</h2>
+	</div>
 	
+
+	<div class="container">
+		<div class="item" id="item1">
+			<h3>
+				Su caracter es juguetón y divertido
+			</h3>
+			<ul>
+				<p>Solo verles jugar con cualquier cosa que se mueve o</p>
+				<p>llama su atención resulta sorprendente, por su capacidad</p>
+				<p>lúdica y su curiosidad por todo lo que pertenece a su</p> 
+				<p>territorio</p>
+			</ul>
+		</div>
+		
+		<div class ="item" id="item2">
+			<h3>
+				hola
+			</h3>
+			<ul>
+				<p>hola</p>
+			</ul>
+		</div>
 	</div>
 	
 	
-	<div class="container-images-gatosadopcion">
+	<div class="container" id="gatos">
 		<center>
 			<a href="GatoBlanco.html"><img src="imagenes/GatoBlanco.jpeg"></a>
 	
