cambios en el index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1> <center>RESCATA UN AMIGO</center> </h1>
         <img src="tierna.jpg" alt="gatitos y perritos" width="700" height="600">
         </header>
+
         <nav>
             <ul>
                 <li>FUNDACION</li>
@@ -41,6 +42,7 @@
             <a href="gatos.html">Pulsa para ir a gatitos</a>
         </div>
         <h2>CREADORES</h2>
+        <p>Cristopher jesus hermosilla nordio</p>
 
     </body>
 </html>
