--- a/GatoBlanco.html
+++ b/GatoBlanco.html
@@ -36,6 +36,12 @@
             </table>
         </center>
     </div>
+    
+    <div class="botones">
+        <a href="index.html"><img src="imagenes/BotonInicioGato.png" alt=""></a>
+
+        <a href="gatos.html"><img src="imagenes/BotonVolverGato.png" alt=""></a>
+    </div>
 
 </body>
 </html>
