--- a/PerroBlanco.html
+++ b/PerroBlanco.html
@@ -37,5 +37,11 @@
         </center>
     </div>
 
+    <div class="botones">
+        <a href="index.html"><img src="imagenes/BotonInicioPerro.png" alt=""></a>
+
+        <a href="perros.html"><img src="imagenes/BotonVolverPerro.png" alt=""></a>
+    </div>
+
 </body>
 </html>
