--- a/gatos.html
+++ b/gatos.html
@@ -51,6 +51,10 @@
 			<a href="GatoGris.html"><img src="imagenes/GatoGris.jpeg"/></a>
 		</center>
 	</div>
+
+	<div class="botones">
+        <a href="index.html"><img src="imagenes/BotonInicioGato.png" alt=""></a>
+    </div>
 	
 </body>
 </html>
