--- a/perros.html
+++ b/perros.html
@@ -16,7 +16,7 @@
 	
 	<div class="container-images-gatosgrandes">
 		<center>
-			<img src="imagenes/GatosGrandes.jpg">
+			<img src="imagenes/perros.jpg">
 		</center>
 	</div>
 
@@ -55,7 +55,11 @@
 	
 			<a href="PerroSalchicha.html"><img src="imagenes/PerroSalchicha.jpeg"/></a>
 		</center>
-	</div>
+    </div>
+    
+    <div class="botones">
+        <a href="index.html"><img src="imagenes/BotonInicioPerro.png" alt=""></a>
+    </div>
 	
 </body>
 </html>
