--- a/GatoCafe.html
+++ b/GatoCafe.html
@@ -37,5 +37,11 @@
         </center>
     </div>
 
+    <div class="botones">
+        <a href="index.html"><img src="imagenes/BotonInicioGato.png" alt=""></a>
+
+        <a href="gatos.html"><img src="imagenes/BotonVolverGato.png" alt=""></a>
+    </div>
+
 </body>
 </html>
