--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
                 <h1> <center>RESCATA UN AMIGO</center> </h1>
                 </header>
         </div>
+
+		<div class="col-md-4 col-xs-12 logo no_left">
+			<a href="index.htm"><img src="imagenes/logo.jpg" alt="logo" width="180" height="150"></a>
+		</div>
+		<div class="col-md-4 col-xs-12">&nbsp;</div>	
+					
         
 
         <div>
