--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
         <div class="adopta">
             <center>
-        <h2>ADOPTA</h2>
-            <a href="perros.html"> <img src="imagenes/22744.png" alt="" width="100" height="100"></a>
-            <a href="gatos.html"> <img src="imagenes/raza.png" alt="" width="100" height="100"></a>
+                <h2>ADOPTA</h2>
+                <a href="perros.html"> <img src="imagenes/IconoPerro.jpeg" height="100" width="100"></a>
+                <a href="gatos.html"> <img src="imagenes/IconoGato.jpeg" height="100" width="100"></a>
             </center>
         </div>
         
