--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
         </div>
 
 		<div class="col-md-4 col-xs-12 logo no_left">
-			<a href=""><img src="imagenes/logo.jpg" alt="logo" width="200" height="150"></a>
+			<img src="imagenes/logo.jpg" alt="logo" width="200" height="150"></a>
 		</div>
-		<div class="col-md-4 col-xs-12">&nbsp;</div>
 
         <div>
             <center> 
